--- a/employ-app-client/src/assets/css/index.css
+++ b/employ-app-client/src/assets/css/index.css
@@ -7,6 +7,23 @@
     height: inherit;
 }
 
+am-tab-bar span{
+    background: #ee0;
+}
+
 .am-card-header-content img {
     width: 30%;
 }
+
+.chat-me {
+    background: #eee;
+}
+
+#chat-page .chat-me .am-list-extra {
+    flex-basis: auto; /* 宽度包裹内容 */
+}
+#chat-page .chat-me .am-list-content {
+    padding-right: 15px;
+    text-align: right;
+}
+
